💄 Fix spacing in layout

--- a/src/app/modules/layout/layout.component.sass
+++ b/src/app/modules/layout/layout.component.sass
@@ -5,5 +5,11 @@ mat-toolbar
     position: absolute
     z-index: 2
 
-mat-sidenav
+mat-sidenav, mat-sidenav-content
     padding-top: 64px
+    @media only screen and (max-width: 600px)
+        padding-top: 56px
+
+mat-nav-list
+    min-width: 220px
+
